src/objects/Complaint__c.object
<CustomObject>
    <description>Customer complaint</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Loss_to_Customer__c</fullName>
        <description>What was the actual / calculated monetary loss to the customer - if any?</description>
        <inlineHelpText>What was the actual / calculated monetary loss to the customer - if any?</inlineHelpText>
        <label>Actual Loss to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Subject__c</fullName>
        <description>Any additional reasons for the complaint</description>
        <label>Additional Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <description>Was this a Broker customer?</description>
        <inlineHelpText>Please select the broker if this is a Broker customer?</inlineHelpText>
        <label>Broker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AngloScottish</fullName>
                </value>
                <value>
                    <fullName>Aspire Money</fullName>
                </value>
                <value>
                    <fullName>Best4Loans</fullName>
                </value>
                <value>
                    <fullName>Checkmyfile</fullName>
                </value>
                <value>
                    <fullName>Choice Loans</fullName>
                </value>
                <value>
                    <fullName>Choose Wisely</fullName>
                </value>
                <value>
                    <fullName>Click Finance</fullName>
                </value>
                <value>
                    <fullName>Creditplus</fullName>
                </value>
                <value>
                    <fullName>Easter Egg</fullName>
                </value>
                <value>
                    <fullName>Experian Credit Matcher</fullName>
                </value>
                <value>
                    <fullName>FirstTrustFinance</fullName>
                </value>
                <value>
                    <fullName>Fluent Loans</fullName>
                </value>
                <value>
                    <fullName>Fluent Loans Alt</fullName>
                </value>
                <value>
                    <fullName>Freedom Finance</fullName>
                </value>
                <value>
                    <fullName>Gopher Money</fullName>
                </value>
                <value>
                    <fullName>Loan Finder</fullName>
                </value>
                <value>
                    <fullName>Loans Warehouse</fullName>
                </value>
                <value>
                    <fullName>Love Money</fullName>
                </value>
                <value>
                    <fullName>Medifinance</fullName>
                </value>
                <value>
                    <fullName>Money Expert</fullName>
                </value>
                <value>
                    <fullName>Moneyfacts -Tesco Compare</fullName>
                </value>
                <value>
                    <fullName>Money Saving Expert</fullName>
                </value>
                <value>
                    <fullName>Money Supermarket</fullName>
                </value>
                <value>
                    <fullName>Norton Finance</fullName>
                </value>
                <value>
                    <fullName>Orange Motor Finance</fullName>
                </value>
                <value>
                    <fullName>Pan Credit</fullName>
                </value>
                <value>
                    <fullName>Pingtree</fullName>
                </value>
                <value>
                    <fullName>Professions Loans</fullName>
                </value>
                <value>
                    <fullName>Salary Finance</fullName>
                </value>
                <value>
                    <fullName>The Loans Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Case Number</description>
        <inlineHelpText>Case Number</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_Investigation__c</fullName>
        <description>What caused the complaint to happen?</description>
        <inlineHelpText>What caused the complaint to happen?</inlineHelpText>
        <label>Cause &amp; Investigation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cause_of_Complaint__c</fullName>
        <label>Cause of Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unsuitable advice</fullName>
                </value>
                <value>
                    <fullName>Unclear guidance / arrangement</fullName>
                </value>
                <value>
                    <fullName>Disputes over sums / charges</fullName>
                </value>
                <value>
                    <fullName>Product performance / features</fullName>
                </value>
                <value>
                    <fullName>Product disclosure information</fullName>
                </value>
                <value>
                    <fullName>Errors / not following instructions</fullName>
                </value>
                <value>
                    <fullName>Delays / timescales</fullName>
                </value>
                <value>
                    <fullName>Other general admin/customer service</fullName>
                </value>
                <value>
                    <fullName>Arrears Related</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Number of complaints in columns B to N which are claims related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Subtype__c</fullName>
        <description>The type of complaint</description>
        <inlineHelpText>Enter the type of complaint.</inlineHelpText>
        <label>What does the Complaint Refer to?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Complaint_Type_Control__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-- Borrower</fullName>
                </value>
                <value>
                    <fullName>Application (general)</fullName>
                </value>
                <value>
                    <fullName>Speed of application process</fullName>
                </value>
                <value>
                    <fullName>Declined application</fullName>
                </value>
                <value>
                    <fullName>Quick Pay</fullName>
                </value>
                <value>
                    <fullName>APR/Interest change</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Borrowing fee</fullName>
                </value>
                <value>
                    <fullName>Credit file update</fullName>
                </value>
                <value>
                    <fullName>Lump sum payment</fullName>
                </value>
                <value>
                    <fullName>Early Settlement</fullName>
                </value>
                <value>
                    <fullName>-- Lender</fullName>
                </value>
                <value>
                    <fullName>Account discrepancies</fullName>
                </value>
                <value>
                    <fullName>Statement discrepancies</fullName>
                </value>
                <value>
                    <fullName>Lending options</fullName>
                </value>
                <value>
                    <fullName>Bad debt</fullName>
                </value>
                <value>
                    <fullName>Lending products</fullName>
                </value>
                <value>
                    <fullName>Funding lending account</fullName>
                </value>
                <value>
                    <fullName>Loan book</fullName>
                </value>
                <value>
                    <fullName>Access to funds</fullName>
                </value>
                <value>
                    <fullName>-- Borroweer and lender</fullName>
                </value>
                <value>
                    <fullName>Payment issues - Inbound</fullName>
                </value>
                <value>
                    <fullName>Payment issues - Outbound</fullName>
                </value>
                <value>
                    <fullName>Customer Errors</fullName>
                </value>
                <value>
                    <fullName>-- Underwriting</fullName>
                </value>
                <value>
                    <fullName>Cancelled in error</fullName>
                </value>
                <value>
                    <fullName>Declined in error</fullName>
                </value>
                <value>
                    <fullName>-- Borrower and UW</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_Control__c</fullName>
        <description>Controlling pick list for complaint type</description>
        <inlineHelpText>Select which type of complaint this is.</inlineHelpText>
        <label>Complaint Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                    <label>Investor</label>
                </value>
                <value>
                    <fullName>Underwriter</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_Misc__c</fullName>
        <description>Type of complaint - Miscellaneous</description>
        <inlineHelpText>Enter complaint type here</inlineHelpText>
        <label>Complaint Type Miscellaneous</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overcharging</fullName>
                </value>
                <value>
                    <fullName>Credit score issues</fullName>
                </value>
                <value>
                    <fullName>Service received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_Product__c</fullName>
        <description>Type of complaint - Product</description>
        <inlineHelpText>Enter the type of complaint for Product</inlineHelpText>
        <label>Consumer Credit Type Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hire purchase / Uber</fullName>
                </value>
                <value>
                    <fullName>Other Lending</fullName>
                </value>
                <value>
                    <fullName>Credit Broking</fullName>
                </value>
                <value>
                    <fullName>Debt Collecting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_Underwriting__c</fullName>
        <description>Complaint type for Underwriting</description>
        <inlineHelpText>Enter complaint type</inlineHelpText>
        <label>Complaint Type Underwriting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled in error</fullName>
                </value>
                <value>
                    <fullName>Declined in error</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_Zopa__c</fullName>
        <description>Type of complaint - Zopa</description>
        <inlineHelpText>Enter the type of complaint</inlineHelpText>
        <label>Complaint Type Zopa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service received</fullName>
                </value>
                <value>
                    <fullName>Member of staff</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>Account closure</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_To_Business__c</fullName>
        <description>What is the total cost to Zopa?</description>
        <inlineHelpText>What is the total cost to Zopa?</inlineHelpText>
        <label>Cost To Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Comment__c</fullName>
        <description>Customer Comment on resolution. Detail why if not happy.</description>
        <inlineHelpText>Customer Comment on resolution. Detail why if not happy.</inlineHelpText>
        <label>Customer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Happy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the customer happy with the final outcome/resolution and happy for the Complaint to be considered closed? Yes or No.
If No why?</description>
        <inlineHelpText>Was the customer happy with the final outcome/resolution and happy for the Complaint to be considered closed? Yes or No.
If No why?</inlineHelpText>
        <label>Customer Happy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Date complaint closed</description>
        <inlineHelpText>Date complaint closed</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Date complaint created</description>
        <inlineHelpText>When was the complaint made</inlineHelpText>
        <label>Date of Complaint</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Resolution__c</fullName>
        <description>Date resolution offered to member.</description>
        <inlineHelpText>Date resolution offered to member. This may differ from date of closure.</inlineHelpText>
        <label>Date Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Details of case</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the member this case is escalated to</description>
        <label>Escalated To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this complaint a FOS complaint?</description>
        <inlineHelpText>Is this complaint a FOS complaint?</inlineHelpText>
        <label>FOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Zopa’s final response? Yes or No</description>
        <inlineHelpText>Is this Zopa’s final response? Yes or No</inlineHelpText>
        <label>Final Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Human_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstitutionList__c</fullName>
        <description>Name of Institution</description>
        <inlineHelpText>Name of Institution</inlineHelpText>
        <label>Institution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro Bank PLC</fullName>
                </value>
                <value>
                    <fullName>P2P Global Investments PLC</fullName>
                </value>
                <value>
                    <fullName>P2PCL1 PLC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this loan funded by an institution? Yes or No.</description>
        <inlineHelpText>Was this loan funded by an institution? Yes or No.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Inconvenience__c</fullName>
        <description>What loss or inconvenience did the customer suffer?</description>
        <inlineHelpText>What loss or inconvenience did the customer suffer?</inlineHelpText>
        <label>Loss &amp; Inconvenience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monetary_Compensation__c</fullName>
        <description>How much have we compensated the customer?</description>
        <inlineHelpText>How much have we compensated the customer?</inlineHelpText>
        <label>Cost in Compensation and GOGW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monetary_Loss__c</fullName>
        <description>What is the monetary value of loss to the customer?</description>
        <inlineHelpText>What is the monetary value of loss to the customer? The amount the Member thinks they have lost.</inlineHelpText>
        <label>Cost to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P2P</fullName>
                </value>
                <value>
                    <fullName>ISA</fullName>
                </value>
                <value>
                    <fullName>PPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refer_to_FOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have we advised the customer that they can refer their case to the FOS and provided them with the information to do so? Yes or No.</description>
        <inlineHelpText>Have we advised the customer that they can refer their case to the FOS and provided them with the information to do so? Yes or No.</inlineHelpText>
        <label>Refer to FOS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>How was this resolved?</description>
        <inlineHelpText>How was this resolved?</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the complaint about a member of staff</description>
        <inlineHelpText>Was the complaint about a member of staff</inlineHelpText>
        <label>Staff Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the complaint.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Main subject reason for complaint</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>The origin/team of the complaint.</description>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrowers</fullName>
                </value>
                <value>
                    <fullName>Lenders</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Underwriters</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Zopa_Cost__c</fullName>
        <label>Total Zopa Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Complaint__c</fullName>
        <label>Type of Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advising, selling and arranging</fullName>
                </value>
                <value>
                    <fullName>Arrears related</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>General admin/customer service</fullName>
                </value>
                <value>
                    <fullName>Information, sums/charges or product performance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zopa_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the complaint about Zopa?</description>
        <inlineHelpText>Was the complaint about Zopa?</inlineHelpText>
        <label>Zopa Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zopa_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zopa Error</label>
        <type>Checkbox</type>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C - {00000}</displayFormat>
        <label>Complaint_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>